--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     </head>
     <body>
       <h1>Jukebox</h1>
-      <div class="container">
+      <div class="grid">
+        <div class="container">
         <img src="images/vinyl.png" class="vinyl" onMouseOver=moveVinyl(2)/> 
-      </div>   
+        </div>
+      </div>
       <div class="player">
         <button class="button">Play</button>
         <button class="button">Reverse</button>
