--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
       <h1>Jukebox</h1>
-      <div class="grid">
+      <div class="grid shadow">
         <div class="container">
           <img src="images/vinyl.png" class="vinyl" onMouseOver=moveVinyl(2)/> 
         </div>
