add stylish texture

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
       <h1>Jukebox</h1>
       <div class="grid shadow">
-        <div class="container">
+        <div class="container shadow">
           <img src="images/vinyl.png" class="vinyl" onMouseOver=moveVinyl(2)/> 
         </div>
         <div class="player">
