text to interface

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="container shadow">
           <img src="images/vinyl.png" class="vinyl" onMouseOver=moveVinyl(2)/> 
         </div>
+        
         <div class="player">
+          <h1>Daft Punk - Lose Yourself to Dance.cd1</h1>
           <button class="button">Play</button>
           <button class="button">Reverse</button>
           <button class="button">Stop</button>
