add some components

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         
         <div class="player">
           <h1>Daft Punk - Lose Yourself to Dance.cd1</h1>
+          <button class="slider-orange"></button>
+          <button class="slider-green"></button>
           <button class="button">Play</button>
           <button class="button">Reverse</button>
           <button class="button">Stop</button>
