--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
         <script defer src="js/main.js"></script>
     </head>
     <body>
-      <h1>Jukebox</h1>
       <div class="grid shadow">
         <div class="container shadow">
           <img src="images/vinyl.png" class="vinyl" onMouseOver=moveVinyl(2)/> 
         </div>
         
         <div class="player">
-          <h1>Daft Punk - Lose Yourself to Dance.cd1</h1>
-          <button class="slider-orange"></button>
-          <button class="slider-green"></button>
+          <h1 class="music inner-border">Daft Punk - Lose Yourself to Dance.cd1</h1>
+          <button class="slider-orange inner-border"></button>
+          <button class="slider-green inner-border"></button>
           <button class="button">Play</button>
           <button class="button">Reverse</button>
           <button class="button">Stop</button>
