--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script defer src="js/main.js"></script>
     </head>
     <body>
+      <!-- <h1 style="font-family: 'Monoton', cursive; text-align: center;">Jukebox</h1> -->
       <div class="grid shadow">
         <div class="container shadow">
           <img src="images/vinyl.png" class="vinyl" onMouseOver=moveVinyl(2)/> 
